# nnsu-cpp-basics-oop

Data-structures-3-4-terms/: README.md
Data-structures-3-4-terms/Bitfield/: README.md
Data-structures-3-4-terms/Bitfield/include/: tbitfield.h  tset.h
Data-structures-3-4-terms/Bitfield/samples/: sample_prime_numbers.cpp
Data-structures-3-4-terms/Bitfield/src/: tbitfield.cpp  tset.cpp
Data-structures-3-4-terms/Bitfield/test/: test_tbitfield.cpp  test_tset.cpp
Data-structures-3-4-terms/Queue/: .travis.yml  CMakeLists.txt  README.md
Data-structures-3-4-terms/Queue/include/: TQueue.h
Data-structures-3-4-terms/Queue/samples/: main.cpp
Data-structures-3-4-terms/Stack and RPN/: .travis.yml  CMakeLists.txt  README.md
Data-structures-3-4-terms/Stack and RPN/include/: RPolNotation.h  TStack.h  Token.h
Data-structures-3-4-terms/Stack and RPN/samples/: CMakeLists.txt  main.cpp
Data-structures-3-4-terms/Stack and RPN/src/: RPolNotation.cpp
Data-structures-3-4-terms/Stack and RPN/test/: RPolNotation_test.cpp  TStack_test.cpp  test_main.cpp
Data-structures-3-4-terms/Triangular Matrix/: .travis.yml  CMakeLists.txt  README.md
Data-structures-3-4-terms/Triangular Matrix/include/: utmatrix.h
Data-structures-3-4-terms/Triangular Matrix/samples/: CMakeLists.txt  sample_matrix.cpp
Data-structures-3-4-terms/Triangular Matrix/test/: CMakeLists.txt  test_main.cpp  test_tmatrix.cpp  test_tvector.cpp
Oop-basics-1-2 term/Algorithms/: Algorithms.sln
Professional-Cpp-5-term/: readme.md
Professional-Cpp-5-term/Task 1/: CMakeLists.txt  main.cpp
(+74 files in other folders)
